// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Choral in simple meter, fixed seeds UIL 1 | 2 Part Treble | F | 2/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
K:F
% End of header, start of tune body:
[V:S] c'8 c'8 | c'8 c'4c'4 | b8 c'8 | c'8 c'8 | c'8 c'8 | c'8 c'4c'4 | b8 g8 | a16 |]
[V:A] f8 e8 | f8 f4f4 | d8 e8 | f8 e8 | e8 f8 | f8 e4e4 | d8 c8 | f16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 2 Part Treble | F | 2/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
K:F
% End of header, start of tune body:
[V:S] c'4c'4 c'8 | c'8 c'4c'4 | c'8 c'8 | b8 g8 | g8 a4a4 | b8 a8 | b4b4 c'8 | c'16 |]
[V:A] f4f4 e8 | f8 e4e4 | f8 e8 | d8 c8 | e8 f4f4 | d8 f8 | f4f4 e8 | f16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 2 Part Treble | F | 3/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
K:F
% End of header, start of tune body:
[V:S] c'8 c'8 b8 | c'16 c'8 | c'16 c'8 | c'16 z8 | c'8 c'8 c'8 | c'8 c'16 | b16 c'4c'4 | c'24 |]
[V:A] f8 f8 d8 | e16 f8 | e8 e8 f8 | e16 z8 | e8 f8 f8 | e8 e16 | d16 e4e4 | f24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 2 Part Treble | F | 3/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
K:F
% End of header, start of tune body:
[V:S] c'4c'4 c'8 b8 | c'4c'4 c'8 c'8 | c'16 b8 | g16 g8 | a16 g8 | a4a4 b8 a8 | g4g4 f8 g8 | a24 |]
[V:A] f4f4 e8 d8 | e4e4 f8 e8 | f16 d8 | c16 e8 | f16 e8 | f4f4 d8 f8 | e4e4 d8 c8 | f24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 2 Part Treble | F | 4/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
K:F
% End of header, start of tune body:
[V:S] c'16 b8 c'8 | c'24 c'8 | c'16 b8 a8 | g24 z8 | d'4c'4 c'16 c'8 | c'16 c'16 | b24 g8 | a32 |]
[V:A] f16 d8 e8 | f24 e8 | f8 f8 d8 f8 | e24 z8 | e8 f16 f8 | e16 e16 | d24 c8 | f32 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 2 Part Treble | F | 4/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
K:F
% End of header, start of tune body:
[V:S] c'4c'4 c'8 b16 | c'4c'4 c'8 c'16 | c'24 b8 | g24 g8 | a24 g8 | a4a4 b8 b12 a4 | g4g4 f8 g16 | a32 |]
[V:A] f4f4 e8 d8 d8 | e4e4 f8 e8 e8 | f24 d8 | c24 e8 | f24 e8 | f4f4 d8 f8 f8 | e4e4 d8 c16 | f32 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 3 | 4 Part Mixed | Bb | 2/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in Bb
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Bb
% End of header, start of tune body:
[V:S] d'8 c'8 | b8 b4b4 | b8 a8 | b8 c'8 | c'4b4 c'8 | b8 c'4c'4 | c'4d'4 c'8 | d'16 |]
[V:A] f8 f8 | f8 f4f4 | g8 f8 | f8 a8 | f8 c8 | f8 e4e4 | e8 c8 | f16 |]
[V:T] B8 c8 | f8 f4f4 | e8 c8 | B8 F8 | B8 A8 | F8 G4G4 | G8 A8 | F16 |]
[V:B] B8 A8 | D8 D4D4 | E8 F8 | D8 F8 | D8 F8 | D8 C4C4 | C8 F8 | B,16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 3 | 4 Part Mixed | Bb | 2/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in Bb
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Bb
% End of header, start of tune body:
[V:S] b12 b4 | c'8 c'8 | c'12 c'4 | c'8 c'8 | c'4b4 b8 | b4a4 g4g4 | g4g4 a8 | b16 |]
[V:A] f12 f4 | f8 f8 | g12 g4 | g8 f8 | f8 g8 | c8 c4c4 | c4c4 c8 | d16 |]
[V:T] d12 d4 | c8 c8 | G8 A4G4 | G8 A8 | B8 B8 | F8 G4G4 | G4G4 F8 | F16 |]
[V:B] B12 B4 | A8 A8 | E12 E4 | E8 F8 | D8 E8 | F8 E4E4 | E4E4 F8 | B,16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 3 | 4 Part Mixed | Bb | 3/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in Bb
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Bb
% End of header, start of tune body:
[V:S] b16 b8 | b4a4 g12 g4 | f8 f16 | f16 z8 | b8 b8 c'8 | b4a4 g16 | f8 g8 a8 | b24 |]
[V:A] f16 e8 | f8 e12 e4 | f8 d16 | c16 z8 | b16 f8 | f8 e16 | c8 e8 c8 | d24 |]
[V:T] d16 B8 | B8 B12 B4 | c8 B16 | A16 z8 | F16 A8 | B8 B16 | A8 G8 F8 | F24 |]
[V:B] B16 G8 | D8 E8 E8 | A,8 B,16 | F16 z8 | D16 F8 | D8 E16 | F8 C8 F8 | B,24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 3 | 4 Part Mixed | Bb | 3/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in Bb
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Bb
% End of header, start of tune body:
[V:S] f12 f4 f8 | f16 g4g4 | g8 g16 | a16 b8 | e16 d4d4 | d8 g8 f4f4 | g4a4 g4g4 a4a4 | b24 |]
[V:A] f12 f4 f8 | f16 e4e4 | e8 g16 | f16 f8 | c8 c8 B4B4 | B8 e8 f4f4 | e8 e4e4 f4f4 | f24 |]
[V:T] d12 d4 c8 | c12 B4 B4B4 | c4B4 c16 | c16 B8 | A16 B4B4 | B8 B8 B4B4 | B8 c4c4 c4c4 | d24 |]
[V:B] B8 B8 F8 | D8 D8 E4E4 | E4D4 E16 | F16 D8 | F16 G4G4 | D8 E8 D4D4 | G8 G4G4 F4F4 | B24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 3 | 4 Part Mixed | Bb | 4/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in Bb
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Bb
% End of header, start of tune body:
[V:S] b16 c'8 b8 | b4b4 b8 b16 | a16 b16 | c'24 z8 | b8 c'16 d'8 | c'8 f16 b8 | a4a4 b8 c'8 c'8 | b32 |]
[V:A] f16 f8 f8 | g4g4 f8 g16 | c8 c8 d16 | f24 z8 | f8 a24 | a4g4 f16 e8 | f4f4 f8 e8 f8 | f32 |]
[V:T] d16 c8 f8 | e4e4 f8 B8 B8 | F16 F16 | A24 z8 | B8 F24 | c8 B16 B8 | c4c4 B8 G8 A8 | d32 |]
[V:B] B16 A8 D8 | E4E4 D8 E8 E8 | F16 B,16 | F24 z8 | D4E4 F24 | F8 D16 G8 | F4F4 D8 C8 F8 | B,32 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 3 | 4 Part Mixed | Bb | 4/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in Bb
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Bb
% End of header, start of tune body:
[V:S] f12 f4 f8 b8 | b12 b4 b8 c'8 | b24 e'8 | c'24 b8 | e'24 d'8 | b12 b4 b4a4 b4c'4 | b8 c'4b4 c'8 a8 | b32 |]
[V:A] f12 f4 f8 e8 | f12 f4 g8 f8 | b24 g8 | a24 f8 | c'24 b8 | e8 d4e4 f8 f8 | f8 e4e4 e8 c8 | d32 |]
[V:T] d12 d4 c8 B8 | B12 B4 B8 f8 | f24 c8 | c24 f8 | f24 f8 | B12 B4 c8 B8 | G12 G4 G8 F8 | F32 |]
[V:B] B8 B8 F8 G8 | D8 C4D4 E8 A8 | D24 C8 | F24 D8 | A24 D8 | G8 F4G4 F8 D8 | E8 E8 C8 F8 | B,32 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 5 | 4 Part Mixed | Ab | 2/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in Ab
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Ab
% End of header, start of tune body:
[V:S] e'8 d'8 | a8 a4a4 | a8 g8 | a8 b8 | a8 d'8 | a8 b4b4 | b8 b8 | a16 |]
[V:A] c'8 f8 | e8 e4e4 | d8 e8 | e8 g8 | e8 d8 | e8 f4f4 | f8 e8 | e16 |]
[V:T] A8 A8 | A4G4 A4A4 | A8 B8 | A8 E8 | E4F4 G4F4 | E8 D4D4 | D8 E8 | c16 |]
[V:B] A8 A8 | C8 C4C4 | F8 E8 | C8 E8 | C8 B,4A,4 | C8 D4D4 | B,8 G,8 | A,16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 5 | 4 Part Mixed | Ab | 2/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in Ab
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Ab
% End of header, start of tune body:
[V:S] e'12 e'4 | f'8 c'8 | d'4 d'8 d'4 | e'8 b8 | c'8 b8 | a4b4 a4a4 | b4b4 b8 | c'16 |]
[V:A] c'12 c'4 | c'8 g8 | f4 f8 f4 | e8 e8 | e8 e8 | e8 f4f4 | f4f4 e8 | e16 |]
[V:T] A12 A4 | A8 G8 | A4 A8 A4 | A8 G8 | A8 D8 | E8 D4D4 | D4D4 E8 | E16 |]
[V:B] A12 A4 | A8 E8 | D4 D8 D4 | C8 E8 | A,8 G,8 | C8 D4D4 | D4D4 G,8 | A,16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 5 | 4 Part Mixed | Ab | 3/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in Ab
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Ab
% End of header, start of tune body:
[V:S] e'16 e'8 | a8 a12 a4 | g8 a16 | g16 z8 | e'12 e'4 d'8 | e'8 b16 | b8 d'8 b8 | c'24 |]
[V:A] c'16 b8 | e8 d12 d4 | e4d4 e16 | B16 z8 | a16 b8 | b4a4 g16 | g8 f8 g8 | e24 |]
[V:T] e16 B8 | c8 A12 A4 | B8 A16 | B16 z8 | A8 B4c4 d8 | A8 B16 | B8 B8 B8 | A24 |]
[V:B] A16 G8 | A8 F12 F4 | E8 C16 | E16 z8 | C16 G8 | C8 E16 | E8 B,8 E8 | A24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 5 | 4 Part Mixed | Ab | 3/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in Ab
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Ab
% End of header, start of tune body:
[V:S] e'4 e'8 e'4 =d'8 | e'16 a6a2 | a8 b16 | b16 e'8 | d'16 e'4e'4 | f'8 b8 a4a4 | b8 b12 b4 | c'24 |]
[V:A] c'4c'4 b4c'4 b4a4 | g16 a6a2 | a8 f16 | b16 a8 | a16 a4a4 | a8 e8 f4f4 | f8 g12 g4 | a24 |]
[V:T] A4 A8 A4 B8 | B16 F6F2 | E8 =D16 | E16 E8 | F16 E4E4 | D8 B8 c4c4 | c4B4 B12 B4 | A24 |]
[V:B] A4 A8 A4 F8 | E12 E4 D6D2 | C8 B,16 | G,16 C8 | D8 D8 C4C4 | D8 G,8 A,4A,4 | D8 E8 D4E4 | A24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 5 | 4 Part Mixed | Ab | 4/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in Ab
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Ab
% End of header, start of tune body:
[V:S] e'16 b8 b8 | a12 a4 g8 a8 | g16 g16 | b24 z8 | c'8 c'24 | d'8 b8 b8 c'8 | c'12 c'4 d'8 b8 | a32 |]
[V:A] c'16 f8 g4f4 | e12 e4 d8 e8 | B16 B16 | g24 z8 | c'8 a24 | a8 e8 e8 g8 | g8 f4f4 f8 g8 | e32 |]
[V:T] A16 B8 B8 | c8 B4c4 d8 A8 | B16 B16 | B24 z8 | G8 F24 | F8 G16 G8 | A12 A4 B8 B8 | c32 |]
[V:B] A16 D8 E8 | A,12 A,4 B,8 C8 | E16 E16 | E24 z8 | =E8 F24 | D8 E16 =E8 | F8 F8 B,8 E8 | A32 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 5 | 4 Part Mixed | Ab | 4/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in Ab
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:Ab
% End of header, start of tune body:
[V:S] e'4 e'8 e'4 d'8 b8 | b4 b8 b4 a8 g8 | c'24 a8 | b24 f8 | f4f4 g8 a12 a4 | b8 b24 | a4 a8 a4 b8 b8 | a32 |]
[V:A] a4a4 b4a4 a4g4 f8 | g4 g8 g4 a8 e8 | f24 a8 | e24 f8 | f4f4 e8 f12 f4 | f8 g24 | f4 f8 f4 f8 g8 | e32 |]
[V:T] c4 c8 c4 d4e4 f8 | e4 e8 e4 e8 G8 | F24 E8 | E24 c8 | d4d4 e8 c12 c4 | B8 d24 | c4 c8 c4 d8 B8 | c32 |]
[V:B] A4 A8 A4 F8 D8 | E4 E8 E4 C8 C8 | A,24 C8 | G,24 A,4G,4 | A,4A,4 E8 A8 A8 | D8 E24 | F4 F8 F4 B,8 E8 | A32 |]
"
`;

exports[`Unison in simple meter, fixed seeds 2/4 | pitched | ties false | kodaly 1`] = `
"X:1 
M:2/4
L:1/32
%%MIDI program 0
%%annotationfont Helvetica 10
%%score 
V:U
K: F clef=treble 
%            End of header, start of tune body: 
"_ta"A8 "_ti"B2"_ki"F2"_ti"D2"_ki"G2 |"_(sh)"z8  "_ta"F8 |"_ti"c4"_ti"F4 "_(sh)"z4 "_ti"C4 |"_(sh)"z8  "_ta"E8 |"_ti"D4"_ti"C4 "_ti"E4"_ti"A4 |"_(sh)"z4 "_ti"G4 "_ti"c4"_ti"B4 |"_ti"A4"_ti"c4 "_ti"F2"_ki"B2"_ti"A2"_ki"B2 |"_tu-u"c16 |
w: mi fa do la re do so do so ti la so ti mi re so fa mi so do fa mi fa so 
"
`;

exports[`Unison in simple meter, fixed seeds 2/4 | pitched | ties true | counting 1`] = `
"X:1 
M:2/4
L:1/32
%%MIDI program 0
%%annotationfont Helvetica 10
%%score 
V:U
K: F clef=treble 
%            End of header, start of tune body: 
"_1"F8 "_2"F8 |"_1"E2"_e"E2"_&"E2"_a"E2 "_(2)"z4 "_&"C4 |"_1"F4"_&"F4 "_2"G4"_&"G4 |"_1"D4"_&"D4 "_2"A8 |"_1"B8 "_(2)"z8  |"_(1)"z4 "_&"G4 "_2"C2"_e"C2"_&"C2"_a"C2 |"_(1)"z4 "_&"G4 "_2"A8 |"_1_(2)"F16 |
w: do do ti ti ti ti so do do re re la la mi fa re so so so so re mi do 
"
`;

exports[`Unison in simple meter, fixed seeds 2/4 | rhythm | ties false | kodaly 1`] = `
"X:1 
M:2/4
L:1/32
%%percmap B claves normal
%%MIDI beat 127 127 127 1
%%annotationfont Helvetica 10
V:U stem=up
K:C clef=perc stafflines=1 
%            End of header, start of tune body: 
"_ta"B8 "_ti"B2"_ki"B2"_ti"B2"_ki"B2 |"_(sh)"z8  "_ta"B8 |"_ti"B4"_ti"B4 "_(sh)"z4 "_ti"B4 |"_(sh)"z8  "_ta"B8 |"_ti"B4"_ti"B4 "_ti"B4"_ti"B4 |"_(sh)"z4 "_ti"B4 "_ti"B4"_ti"B4 |"_ti"B4"_ti"B4 "_ti"B2"_ki"B2"_ti"B2"_ki"B2 |"_tu-u"B16 |
"
`;

exports[`Unison in simple meter, fixed seeds 2/4 | rhythm | ties true | counting 1`] = `
"X:1 
M:2/4
L:1/32
%%percmap B claves normal
%%MIDI beat 127 127 127 1
%%annotationfont Helvetica 10
V:U stem=up
K:C clef=perc stafflines=1 
%            End of header, start of tune body: 
"_1"B8 "_2"B8 |"_1"B2"_e"B2"_&"B2"_a"B2 "_(2)"z4 "_&"B4 |"_1"B4"_&"B4 "_2"B4"_&"B4 |"_1"B4"_&"B4 "_2"B8 |"_1"B8 "_(2)"z8  |"_(1)"z4 "_&"B4 "_2"B2"_e"B2"_&"B2"_a"B2 |"_(1)"z4 "_&"B4 "_2"B8 |"_1_(2)"B16 |
"
`;

exports[`Unison in simple meter, fixed seeds 3/4 | pitched | ties false | kodaly 1`] = `
"X:1 
M:3/4
L:1/32
%%MIDI program 0
%%annotationfont Helvetica 10
%%score 
V:U
K: F clef=treble 
%            End of header, start of tune body: 
"_ta"c8 "_ta-(i)"F12"_ti"E4 |"_(sh)"z8  "_tu-u"G16 |"_ta-(i)"C12"_ti"D4 "_(sh)"z4 "_ti"B4 |"_tu-u"A16 "_(sh)"z8  |"_ta-(i)"G12"_ti"A4 "_ti"E4"_ti"A4 |"_(sh)"z4 "_ti"c4 "_ti"B4"_ti"F4 "_ti"E4"_ti"C4 |"_ti"D2"_ki"C2"_ti"F2"_ki"B2 "_ta"c8 "_(sh)"z8  |"_tu-u-u"F24 |
w: so do ti re so la fa mi re mi ti mi so fa do ti so la so do fa so do 
"
`;

exports[`Unison in simple meter, fixed seeds 3/4 | pitched | ties true | counting 1`] = `
"X:1 
M:3/4
L:1/32
%%MIDI program 0
%%annotationfont Helvetica 10
%%score 
V:U
K: F clef=treble 
%            End of header, start of tune body: 
"_1"c8 "_2"F8 "_3"A4"_&"A4 |"_(1)"z4 "_&"B4 "_2"G4"_&"G4 "_3"C4"_&"C4 |"_1"E4"_&"E4 "_2"F8 "_3"E8 |"_1_(2)"D16 "_(3)"z8  |"_1"D4"_&_(2)"F8"_&"B4 "_(3)"z4 "_&"G4 |"_(1)"z8  "_2"c4"_&"c4 "_(3)"z8  |"_1"D4"_&"D4 "_(2)"z4 "_&"C4 "_3"F4"_&"F4 |"_1_(2)_(3)"c24 |
w: so do mi mi fa re re so so ti ti do ti la la do fa re so so la la so do do so 
"
`;

exports[`Unison in simple meter, fixed seeds 3/4 | rhythm | ties false | kodaly 1`] = `
"X:1 
M:3/4
L:1/32
%%percmap B claves normal
%%MIDI beat 127 127 127 1
%%annotationfont Helvetica 10
V:U stem=up
K:C clef=perc stafflines=1 
%            End of header, start of tune body: 
"_ta"B8 "_ta-(i)"B12"_ti"B4 |"_(sh)"z8  "_tu-u"B16 |"_ta-(i)"B12"_ti"B4 "_(sh)"z4 "_ti"B4 |"_tu-u"B16 "_(sh)"z8  |"_ta-(i)"B12"_ti"B4 "_ti"B4"_ti"B4 |"_(sh)"z4 "_ti"B4 "_ti"B4"_ti"B4 "_ti"B4"_ti"B4 |"_ti"B2"_ki"B2"_ti"B2"_ki"B2 "_ta"B8 "_(sh)"z8  |"_tu-u-u"B24 |
"
`;

exports[`Unison in simple meter, fixed seeds 3/4 | rhythm | ties true | counting 1`] = `
"X:1 
M:3/4
L:1/32
%%percmap B claves normal
%%MIDI beat 127 127 127 1
%%annotationfont Helvetica 10
V:U stem=up
K:C clef=perc stafflines=1 
%            End of header, start of tune body: 
"_1"B8 "_2"B8 "_3"B4"_&"B4 |"_(1)"z4 "_&"B4 "_2"B4"_&"B4 "_3"B4"_&"B4 |"_1"B4"_&"B4 "_2"B8 "_3"B8 |"_1_(2)"B16 "_(3)"z8  |"_1"B4"_&_(2)"B8"_&"B4 "_(3)"z4 "_&"B4 |"_(1)"z8  "_2"B4"_&"B4 "_(3)"z8  |"_1"B4"_&"B4 "_(2)"z4 "_&"B4 "_3"B4"_&"B4 |"_1_(2)_(3)"B24 |
"
`;

exports[`Unison in simple meter, fixed seeds 4/4 | pitched | ties false | kodaly 1`] = `
"X:1 
M:4/4
L:1/32
%%MIDI program 0
%%annotationfont Helvetica 10
%%score 
V:U
K: F clef=treble 
%            End of header, start of tune body: 
"_ta"F8 "_ta-(i)"D12"_ti"G4 "_(sh)"z8  |"_tu-u"A16 "_ta-(i)"F12"_ti"E4 |"_(sh)"z4 "_ti"c4 "_(sh)"z8  "_ta-(i)"G12"_ti"C4 |"_tu-u-u"F24 "_ta"E8 |"_ti"C4"_ti"D4 "_ti"G4"_ti"C4 "_ti"D4"_ti"C4 "_ti"E2"_ki"A2"_ti"E2"_ki"F2 |"_ta"B8 "_(sh)"z4 "_ti"A4 "_ti"D4"_ti"E4 "_ti"A4"_ti"D4 |"_ta"F8 "_ti"C2"_ki"F2"_ti"B2"_ki"c2 "_(sh)"z4 "_ti"c4 "_ti"F2"_ki"B2"_ti"E2"_ki"G2 |"_tu-u-u-u"A32 |
w: do la re mi do ti so re so do ti so la re so la so ti mi ti do fa mi la ti mi la do so do fa so so do fa ti re mi 
"
`;

exports[`Unison in simple meter, fixed seeds 4/4 | pitched | ties true | counting 1`] = `
"X:1 
M:4/4
L:1/32
%%MIDI program 0
%%annotationfont Helvetica 10
%%score 
V:U
K: F clef=treble 
%            End of header, start of tune body: 
"_1"A8 "_2"B8 "_3_(4)"F12"_&"c4 |"_(1)"z4 "_&"G4 "_2"C4"_&"C4 "_3"D4"_&"D4 "_4"E4"_&"E4 |"_1"A8 "_2_(3)"G16 "_(4)"z4 "_&"c4 |"_1_(2)_(3)"B24 "_4"F8 |"_(1)"z4 "_&"F4 "_2"G8 "_(3)"z4 "_&"G4 "_(4)"z8  |"_(1)"z4 "_&"B4 "_(2)"z4 "_&"E4 "_3"F4"_&"F4 "_4"D2"_e"D2"_&"D2"_a"D2 |"_1"C4"_&"C4 "_(2)"z8  "_3"A4"_&_(4)"c8"_&"B4 |"_1_(2)_(3)_(4)"A32 |
w: mi fa do so re so so la la ti ti mi re so fa do do re re fa ti do do la la la la so so mi so fa mi 
"
`;

exports[`Unison in simple meter, fixed seeds 4/4 | rhythm | ties false | kodaly 1`] = `
"X:1 
M:4/4
L:1/32
%%percmap B claves normal
%%MIDI beat 127 127 127 1
%%annotationfont Helvetica 10
V:U stem=up
K:C clef=perc stafflines=1 
%            End of header, start of tune body: 
"_ta"B8 "_ta-(i)"B12"_ti"B4 "_(sh)"z8  |"_tu-u"B16 "_ta-(i)"B12"_ti"B4 |"_(sh)"z4 "_ti"B4 "_(sh)"z8  "_ta-(i)"B12"_ti"B4 |"_tu-u-u"B24 "_ta"B8 |"_ti"B4"_ti"B4 "_ti"B4"_ti"B4 "_ti"B4"_ti"B4 "_ti"B2"_ki"B2"_ti"B2"_ki"B2 |"_ta"B8 "_(sh)"z4 "_ti"B4 "_ti"B4"_ti"B4 "_ti"B4"_ti"B4 |"_ta"B8 "_ti"B2"_ki"B2"_ti"B2"_ki"B2 "_(sh)"z4 "_ti"B4 "_ti"B2"_ki"B2"_ti"B2"_ki"B2 |"_tu-u-u-u"B32 |
"
`;

exports[`Unison in simple meter, fixed seeds 4/4 | rhythm | ties true | counting 1`] = `
"X:1 
M:4/4
L:1/32
%%percmap B claves normal
%%MIDI beat 127 127 127 1
%%annotationfont Helvetica 10
V:U stem=up
K:C clef=perc stafflines=1 
%            End of header, start of tune body: 
"_1"B8 "_2"B8 "_3_(4)"B12"_&"B4 |"_(1)"z4 "_&"B4 "_2"B4"_&"B4 "_3"B4"_&"B4 "_4"B4"_&"B4 |"_1"B8 "_2_(3)"B16 "_(4)"z4 "_&"B4 |"_1_(2)_(3)"B24 "_4"B8 |"_(1)"z4 "_&"B4 "_2"B8 "_(3)"z4 "_&"B4 "_(4)"z8  |"_(1)"z4 "_&"B4 "_(2)"z4 "_&"B4 "_3"B4"_&"B4 "_4"B2"_e"B2"_&"B2"_a"B2 |"_1"B4"_&"B4 "_(2)"z8  "_3"B4"_&_(4)"B8"_&"B4 |"_1_(2)_(3)_(4)"B32 |
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 4 Part Mixed | F | 2/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:F
% End of header, start of tune body:
[V:S] c'8 c'8 | c'8 c'4c'4 | d'8 c'4b4 | c'8 c'8 | c'8 c'8 | c'8 c'4c'4 | c'4b4 c'8 | c'16 |]
[V:A] a8 g8 | a8 a4a4 | b8 g8 | f8 g8 | g8 f4g4 | f8 g4g4 | f8 g8 | a16 |]
[V:T] c8 c8 | c8 c4c4 | B8 c8 | A8 c8 | c8 A8 | A4B4 c4c4 | d8 e8 | c16 |]
[V:B] F8 E4D4 | F8 F4F4 | D8 E4D4 | F8 E8 | E8 F8 | F8 E4E4 | D8 C8 | F16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 4 Part Mixed | F | 2/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:2/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:F
% End of header, start of tune body:
[V:S] c'4c'4 c'8 | c'8 c'4c'4 | c'8 c'8 | b8 g8 | g8 a4a4 | b8 a8 | b4b4 c'8 | c'16 |]
[V:A] c'4c'4 c'8 | a8 g4g4 | a8 g8 | f8 g8 | g8 f4f4 | f8 f8 | f4f4 g8 | a16 |]
[V:T] A4A4 B8 | A4B4 c4c4 | c8 c8 | d8 e8 | c8 c4c4 | B8 c8 | d4d4 c8 | c16 |]
[V:B] F4F4 E8 | F8 E4E4 | F8 E4D4 | D8 C8 | D4E4 F4F4 | D8 F8 | F4F4 E8 | F16 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 4 Part Mixed | F | 3/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:F
% End of header, start of tune body:
[V:S] c'8 c'8 b8 | c'16 c'8 | c'16 a8 | g16 z8 | c'8 c'8 c'8 | c'8 c'16 | c'12 b4 c'4c'4 | c'24 |]
[V:A] c'8 a8 b8 | g8 g8 a8 | g16 f8 | g16 z8 | g8 a8 a8 | g8 g16 | f16 g4g4 | a24 |]
[V:T] A8 c8 d8 | c16 c8 | c16 c8 | c16 z8 | c8 c8 c8 | c8 c16 | d8 d8 c4c4 | c24 |]
[V:B] F8 F8 D8 | E16 F8 | E12 D4 F8 | E16 z8 | E8 F8 F8 | E4D4 E16 | D8 D8 E4E4 | F24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 4 Part Mixed | F | 3/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:3/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:F
% End of header, start of tune body:
[V:S] c'4c'4 c'8 c'8 | c'4c'4 c'8 c'8 | b16 c'8 | e'16 c'8 | c'16 c'4d'4 | c'4c'4 b8 c'8 | c'4c'4 b8 g8 | a24 |]
[V:A] c'4c'4 c'8 a8 | g4g4 g8 a8 | f16 g8 | g16 g8 | g12 f4 g8 | a4a4 b8 a8 | g4g4 f8 g8 | f24 |]
[V:T] A4A4 c8 c8 | c4c4 c8 c8 | d8 d8 c8 | c16 c8 | A8 A8 c8 | c4c4 d8 c8 | c4c4 d8 e8 | c24 |]
[V:B] F4F4 E4F4 F8 | E4E4 E8 F8 | D16 E8 | C16 E8 | F8 F8 E4F4 | F4F4 D8 E4F4 | E4E4 D8 C8 | F24 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 4 Part Mixed | F | 4/4 | seed 11 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:F
% End of header, start of tune body:
[V:S] c'16 d'8 c'8 | c'24 c'4b4 | c'16 b8 c'8 | c'24 z8 | c'8 c'16 c'8 | c'8 b8 c'16 | b24 g8 | a32 |]
[V:A] c'16 b8 g8 | a24 a4g4 | a8 a8 b8 a8 | g24 z8 | g8 a16 a8 | a8 g8 g8 f8 | f24 g8 | f32 |]
[V:T] A16 B8 c8 | c24 c8 | c8 c8 d8 c8 | c24 z8 | c4B4 c16 c8 | c16 c16 | d24 e8 | c32 |]
[V:B] F16 D8 E8 | F24 E8 | F8 F8 D8 F8 | E24 z8 | E4D4 F16 F8 | E12 D4 E16 | D24 C8 | F32 |]
"
`;

exports[`Choral in simple meter, fixed seeds UIL 1 | 4 Part Mixed | F | 4/4 | seed 4242 1`] = `
"X:1
T:Sight Reading Exercise in F
C:abc-sightreading.com
M:4/4
L:1/32
Q:1/4=72
%%MIDI program 0
%%score [S A T B]
V:S clef=treble octave=-1 name="Soprano" snm="S"
V:A clef=treble octave=-1 name="Alto" snm="A"
V:T clef=treble transpose=-12 name="Tenor" snm="T"
V:B clef=bass octave=-1 name="Bass" snm="B"
K:F
% End of header, start of tune body:
[V:S] c'4c'4 c'8 c'16 | c'4c'4 c'8 c'16 | b24 c'8 | e'24 c'8 | c'24 c'4d'4 | c'4c'4 b8 c'16 | c'4c'4 b8 g16 | a32 |]
[V:A] c'4c'4 c'8 a16 | g4g4 g8 a16 | f24 g8 | g24 g8 | g16 f8 g8 | a4a4 b8 a16 | g4g4 f8 g16 | f32 |]
[V:T] A4A4 c8 c16 | c4c4 c8 c16 | d24 c8 | c24 c8 | B16 A8 c8 | c4c4 d8 c16 | c4c4 d8 e16 | c32 |]
[V:B] F4F4 E8 F16 | E4E4 E8 F16 | D24 E8 | C24 E8 | F24 E8 | F4F4 D8 F16 | E4E4 D8 C16 | F32 |]
"
`;
